--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <p>This is the first file in my new Git Repo.</p>
 <h5>New Change</h5>
 
+<div><img src="rail.png" alt="Hello World from Space"
+style="width:100%;max-width:200pxpx"></div>
+
 </body>
 </html>
