--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
 <h5>New Change</h5>
+<p>This line is here to show how merging works.</p>
 
 </body>
 </html>
