added new image

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <div><img src="rail.png" alt="Hello World from Space"
 style="width:100%;max-width:200pxpx"></div>
+<h6>Work after emergencyh woorking</h6>
 
 </body>
 </html>
