changes in index

--- a/index.html
+++ b/index.html
@@ -15,5 +15,11 @@
 style="width:100%;max-width:200pxpx"></div>
 <h6>Work after emergencyh woorking</h6>
 
+
+
+<div>
+	
+	<span>For Git Push</span>
+</div>
 </body>
 </html>
