Update index.html with branch line

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ style="width:100%;max-width:200pxpx"></div>
 <div>
 	
 	<span>For Git Push</span>
+	<p>New Branch Added at Git Hub</p>
 </div>
 </body>
 </html>
