--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@ style="width:100%;max-width:200pxpx"></div>
 	
 	<span>For Git Push</span>
 	<p>New Branch Added at Git Hub</p>
+	<h6>Working oocally on git on branch html-sekelton</h6>
+
 </div>
 </body>
 </html>
